--- a/estructura_app/requirements.txt
+++ b/estructura_app/requirements.txt
@@ -7,6 +7,7 @@ setuptools>=65.5.1 # not directly required, pinned by Snyk to avoid a vulnerabil
 Flask-SQLAlchemy==3.0.5
 SQLAlchemy==2.0.20
 Flask-Migrate==4.0.4
-psycopg2==2.9.7
-psycopg[binary]
+psycopg2-binary
 python-dotenv==1.0.1
+pytest==8.3.2
+Flask-Testing==0.8.1
